changed all the json/curl samples from html to markdown

--- a/_includes/sections/insight-links.html
+++ b/_includes/sections/insight-links.html
@@ -5,7 +5,7 @@
         <li>curl</li>
     </ul>
     <div class="resp-tabs-container insight-links-tabs">
-        {% include /source/curl/insight-links.html %}
+        {% include /source/curl/insight-links.md %}
     </div>
 </div>
 
