--- a/_includes/sections/insight-request.html
+++ b/_includes/sections/insight-request.html
@@ -5,7 +5,7 @@
         <li>curl</li>
     </ul>
     <div class="resp-tabs-container get-insight-tabs">
-        {% include /source/curl/insight-request.html %}
+        {% include /source/curl/insight-request.md %}
     </div>
 </div>
 
