--- a/_includes/sections/multi-language-loading.html
+++ b/_includes/sections/multi-language-loading.html
@@ -9,7 +9,7 @@
         <li>curl</li>
     </ul>
     <div class="resp-tabs-container language-tabs">
-        {% include /source/curl/multi-language-loading.html %}
+        {% include /source/curl/multi-language-loading.md %}
     </div>
 </div>
 
@@ -18,7 +18,7 @@
 
 <p>After creating a bundle, you'll receive a response which looks something like this:</p>
 
-{% include /source/json/bundle_response.html %}
+{% include /source/json/bundle_callback.md %}
 
 <script>
     $(document).ready(function() {
