--- a/_includes/sections/multi-language-searching.html
+++ b/_includes/sections/multi-language-searching.html
@@ -9,7 +9,7 @@
         <li>curl</li>
     </ul>
     <div class="resp-tabs-container language-search-tabs">
-        {% include /source/curl/multi-language-searching.html %}
+        {% include /source/curl/multi-language-searching.md %}
     </div>
 </div>
 
