--- a/_includes/sections/request-topics.html
+++ b/_includes/sections/request-topics.html
@@ -7,7 +7,7 @@
     <div class="resp-tabs-container get-insight-tabs">
         <div>
             <pre>
-                {% include /source/curl/request-topics.html %}
+                {% include /source/curl/request-topics.md %}
             </pre>
         </div>
     </div>
