--- a/_includes/message-beta.html
+++ b/_includes/message-beta.html
@@ -1,3 +1,3 @@
 <div class="beta">
-    <strong>Beta:</strong> This feature is currently in beta. Please <a href="mailto:support@clarify.io">contact Support</a> to enable it.
+    <strong>Beta:</strong> This feature is currently in beta. Please <a href="mailto:support@clarify.io?subject={{ page.title }}">contact Support</a> to enable it.
 </div>
