--- a/_includes/message-invite.html
+++ b/_includes/message-invite.html
@@ -1,3 +1,3 @@
 <div class="invite">
-    <strong>By Invite Only:</strong> This is not available by default. Please <a href="mailto:support@clarify.io">contact Support</a> to enable it.
+    <strong>By Invite Only:</strong> This is not available by default. Please <a href="mailto:support@clarify.io?subject={{ page.title }}">contact Support</a> to enable it.
 </div>
