clearing all the params that are already set by default

--- a/_includes/sections/process-topics.html
+++ b/_includes/sections/process-topics.html
@@ -16,11 +16,7 @@
 <script>
     $(document).ready(function() {
         $('#process-topics-tabs').easyResponsiveTabs({
-            tabidentify: 'process-topics-tabs', // The tab groups identifier
-            activetab_bg: '#fff', // background color for active tabs in this group
-            inactive_bg: '#F5F5F5', // background color for inactive tabs in this group
-            active_border_color: '#c1c1c1', // border color for active tabs heads in this group
-            active_content_border_color: '#5AB1D0' // border color for active tabs contect in this group so that it matches the tab head border
+            tabidentify: 'process-topics-tabs'
         });
     });
 </script>
