--- a/_includes/sections/media-searching.html
+++ b/_includes/sections/media-searching.html
@@ -36,11 +36,7 @@ Dorothy and the Wizard of Oz
 <script>
     $(document).ready(function() {
         $('#searching-tabs').easyResponsiveTabs({
-            tabidentify: 'searching-tabs', // The tab groups identifier
-            activetab_bg: '#fff', // background color for active tabs in this group
-            inactive_bg: '#F5F5F5', // background color for inactive tabs in this group
-            active_border_color: '#c1c1c1', // border color for active tabs heads in this group
-            active_content_border_color: '#5AB1D0' // border color for active tabs contect in this group so that it matches the tab head border
+            tabidentify: 'searching-tabs'
         });
     });
 </script>
