--- a/_includes/sections/multi-language-classification.html
+++ b/_includes/sections/multi-language-classification.html
@@ -1,10 +1,12 @@
-<a name="language-classification"></a>
+{% assign tabs="insight-links" %}
+
+<a name="{{ tabs }}"></a>
 
 <h3>Getting your Language Information</h3>
 
-<p>Our language detection is automatic and gets requested like other Insights such as <a href="/quickstarts/insight-keyword.html">Keywords</a>. This can be accomplished with a single API call:</p>
+<p>Our language detection is automatic and gets requested like other Insights such as <a href="/quickstarts/insights-keywords.html">Keywords</a>. This can be accomplished with a single API call:</p>
 
-{% include /sections/insight-links.html %}
+{% include /structural/tabs.html %}
 
 <p>That will return with the list of available insights, including Classification:</p>
 
