--- a/_includes/sections/multi-language-loading.html
+++ b/_includes/sections/multi-language-loading.html
@@ -1,30 +1,19 @@
-<a name="multi-language-loading"></a>
+{% assign tabs="multi-language-loading" %}
+
+<a name="{{ tabs }}"></a>
 
 <h3>Loading Audio by Language</h3>
 
 <p>Our system automatically detects the language of your media file so this process is no different than adding a English language media. You can do this with a single command:</p>
 
-<div id="language-tabs">
-    <ul class="resp-tabs-list language-tabs">
-        <li>curl</li>
-    </ul>
-    <div class="resp-tabs-container language-tabs">
-        {% include /source/curl/multi-language-loading.md %}
-    </div>
-</div>
+{% include /structural/tabs.html %}
 
 <p>Naming the bundle and providing a notify_url are both optional. We have a number of audio and video files available for processing on <a href="http://clarify.io/media">our Media Page</a>.</p>
-<p><em><strong>Hint:</strong> You don&#8217;t have to download these files. Instead you can pass us these urls via the create method shown above.</em></p>
+
+<div class="notice">
+    <strong>Note:</strong> You don't have to download these files. Instead you can pass us these urls via the create/POST method shown above.
+</div>
 
 <p>After creating a bundle, you'll receive a response which looks something like this:</p>
 
 {% include /source/json/bundle_callback.md %}
-
-<script>
-    $(document).ready(function() {
-        $('#language-tabs').easyResponsiveTabs({
-            tabidentify: 'language-tabs'
-        });
-
-    });
-</script>
