--- a/_includes/sections/multi-language-searching.html
+++ b/_includes/sections/multi-language-searching.html
@@ -1,22 +1,9 @@
-<a name="multi-language-searching"></a>
+{% assign tabs="multi-language-searching" %}
+
+<a name="{{ tabs }}"></a>
 
 <h3>Searching Media by Language</h3>
 
 <p>To search, you use the same object you created before and can search using your keywords. The only change is that you have to specify the language of the term you&#8217;re seeking. This is done with a single command:</p>
 
-<div id="language-search-tabs">
-    <ul class="resp-tabs-list language-search-tabs">
-        <li>curl</li>
-    </ul>
-    <div class="resp-tabs-container language-search-tabs">
-        {% include /source/curl/multi-language-searching.md %}
-    </div>
-</div>
-
-<script>
-    $(document).ready(function() {
-        $('#language-search-tabs').easyResponsiveTabs({
-            tabidentify: 'language-search-tabs'
-        });
-    });
-</script>
+{% include /structural/tabs.html %}
