pulled all the messages out of the content and into a subfolder

--- a/_includes/sections/media-loading.html
+++ b/_includes/sections/media-loading.html
@@ -10,9 +10,7 @@
 
 <p>Naming the bundle and providing a notify_url are both optional. We have a number of audio and video files available for processing on <a href="http://clarify.io/media">our Media Page</a>.</p>
 
-<div class="notice">
-    <strong>Note:</strong> You don't have to download these files. Instead you can pass us these urls via the create/POST method shown above.
-</div>
+{% include /messages/no-download.html %}
 
 After creating a bundle, you'll receive a response which looks something like this:
 
