flagging json nodes as code for separate formatting

--- a/_includes/sections/media-loading.html
+++ b/_includes/sections/media-loading.html
@@ -8,7 +8,7 @@
 
 {% include /structural/tabs.html %}
 
-<p>Naming the bundle and providing a notify_url are both optional. We have a number of audio and video files available for processing on <a href="http://clarify.io/media">our Media Page</a>.</p>
+<p>Naming the bundle and providing a <code>notify_url</code> are both optional. We have a number of audio and video files available for processing on <a href="http://clarify.io/media">our Media Page</a>.</p>
 
 {% include /messages/no-download.html %}
 
