--- a/_includes/sections/multi-language-classification.html
+++ b/_includes/sections/multi-language-classification.html
@@ -12,7 +12,7 @@
 
 {% include /source/json/insights_r4.md %}
 
-<p>The most important part of this payload is the 'href' of the 'insight:classification' key. By retrieving the contents of that URI, Clarify will give you the dominant language detected in the audio track(s).</p>
+<p>The most important part of this payload is the <code>href</code> of the <code>insight:classification</code> key. By retrieving the contents of that URI, Clarify will give you the dominant language detected in the audio track(s).</p>
 
 {% include /source/json/insight-data-classification.md %}
 
