simplifying the header styles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1924,32 +1924,39 @@ footer {
     left: 660px;
 }
 
-h1 {
-    font-family: Oswald;
-    font-weight: 300;
-    font-size: 32px;
-    line-height: 32px;
-    letter-spacing: 3px;
-    font-style: normal;
-    text-transform: uppercase;
-    text-decoration: none;
+h1, h2, h3, h4 {
     direction: ltr;
-    margin-top: 35px;
+    font-family: Oswald;
+    font-style: normal;
+    font-weight: 300;
+    letter-spacing: 3px;
     margin-bottom: 10px;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
+h1 {
+    font-size: 36px;
+    line-height: 32px;
+    margin-top: 35px;
+}
+
+h2 {
+    font-size: 27px;
+    line-height: 32px;
+    margin-top: 20px;
 }
 
 h3 {
-    font-family: Oswald;
-    font-weight: 300;
-    font-size: 24px;
-    line-height: 32px;
-    letter-spacing: 3px;
-    font-style: normal;
-    text-transform: uppercase;
-    text-decoration: none;
-    direction: ltr;
-    margin-top: 20px;
-    margin-bottom: 10px;
+    font-size: 18px;
+    line-height: 24px;
+    margin-top: 10px;
+}
+
+h4 {
+    font-size: 15px;
+    line-height: 24px;
+    margin-top: 10px;
 }
 
 .documentation-section {
