moved media to the docs site

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,8 +4,9 @@
         <div class="menu-documentation-sidebar-container">
             <ul id="menu-documentation-sidebar" class="menu">
                 <li class="menu-item"><a href="/api/">API Endpoints</a></li>
-                <li class="menu-item"><a href="/faq/">Frequently Asked Questions</a></li>
                 <li class="menu-item"><a href="/libraries/">Libraries/SDKs</a></li>
+                <li class="menu-item"><a href="/media/">Sample Media</a></li>
+                <li class="menu-item"><a href="/faq/">Frequently Asked Questions</a></li>
                 <li class="menu-item"><a href="/errors/">Error Codes</a></li>
                 <li class="menu-item"><a href="/quickstarts/">Quickstarts</a>
                     <ul class="sub-menu">
