--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,18 +1,19 @@
 <div class="dataTypeShape mainShape60">
     <a href="http://Clarify.io/">
         <div class="mainImage55">
-            <img src="/assets/img/clarify-logo.png">
+            <img src="/assets/img/clarify-logo.png" style="padding-left: 153px;">
         </div>
     </a>
 </div>
 <div class="menu left horizontal mainMenu54">
     <ul class="menu left horizontal">
         <li class="menu-item"><a href="http://clarify.io/how-clarify-works/">How it Works</a></li>
+        <li class="menu-item"><a href="http://clarify.io/showcase/">Showcase</a></li>
         <li class="menu-item"><a href="http://clarify.io/pricing/">Pricing</a></li>
+        <li class="menu-item"><a href="/">Docs</a></li>
         <li class="menu-item"><a href="http://clarify.io/solution-providers/">Solution Providers</a></li>
-        <li class="menu-item"><a href="/">Documentation</a></li>
-        <li class="menu-item"><a href="https://developer.clarify.io/">Dev Portal</a></li>
         <li class="menu-item"><a href="http://clarify.io/blog/">Blog</a></li>
+        <li class="menu-item"><a href="https://developer.clarify.io/">Log In</a></li>
         <li class="menu-item"><a href="https://developer.clarify.io/accounts/signup/">Sign Up</a></li>
     </ul>
 </div>
