--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,19 +1,24 @@
-<div class="dataTypeShape mainShape60">
-    <a href="http://Clarify.io/">
-        <div class="mainImage55">
-            <img src="/assets/img/clarify-logo.png" style="padding-left: 153px;">
+<div class='mainShape60'>
+    <div class='mainImage55'>
+        <a href='/'>
+            <img width="100" height="40" src="/assets/img/clarify-logo.png" style="padding-top: 20px; padding-left: 175px;">
+        </a>
+
+        <div class="menu left horizontal mainMenu54">
+            <ul class="menu left horizontal">
+                <li class="menu-item"><a href="http://clarify.io/how-clarify-works/">How it Works</a></li>
+                <li class="menu-item"><a href="http://clarify.io/showcase/">Showcase</a></li>
+                <li class="menu-item"><a href="http://clarify.io/pricing/">Pricing</a></li>
+                <li class="menu-item"><a href="/">Docs</a></li>
+                <li class="menu-item"><a href="http://clarify.io/solution-providers/">Solution Providers</a></li>
+                <li class="menu-item"><a href="http://clarify.io/blog/">Blog</a></li>
+                <li class="menu-item"><a href="https://developer.clarify.io/">Log In</a></li>
+                <li class="menu-item"><a href="https://developer.clarify.io/accounts/signup/">Sign Up</a></li>
+            </ul>
         </div>
-    </a>
+    </div>
 </div>
-<div class="menu left horizontal mainMenu54">
-    <ul class="menu left horizontal">
-        <li class="menu-item"><a href="http://clarify.io/how-clarify-works/">How it Works</a></li>
-        <li class="menu-item"><a href="http://clarify.io/showcase/">Showcase</a></li>
-        <li class="menu-item"><a href="http://clarify.io/pricing/">Pricing</a></li>
-        <li class="menu-item"><a href="/">Docs</a></li>
-        <li class="menu-item"><a href="http://clarify.io/solution-providers/">Solution Providers</a></li>
-        <li class="menu-item"><a href="http://clarify.io/blog/">Blog</a></li>
-        <li class="menu-item"><a href="https://developer.clarify.io/">Log In</a></li>
-        <li class="menu-item"><a href="https://developer.clarify.io/accounts/signup/">Sign Up</a></li>
-    </ul>
-</div>
+
+<header>
+    <div class='mainMainContent2'></div>
+</header>
