simplifying the html

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,25 +10,21 @@
             <div class='mainShape43' ></div>
             <div class='footer-column fc-1'>
                 <h2>Company</h2>
-                <p>
-                    <a href="http://clarify.io/">Home</a><br>
-                    <a href="http://clarify.io/about-us">About</a><br>
-                    <a target="_blank" href="http://clarify.io/jobs">Jobs</a><br>
-                    <a href="http://clarify.io/events">Events</a><br>
-                    <a href="http://clarify.io/news">In the News</a><br>
-                    <a target="_blank" href="http://clarify.totemapp.com/">Press Kit</a><br>
-                    <a href="http://clarify.io/contact-us">Contact us</a>
-                </p>
+                <a href="http://clarify.io/">Home</a><br>
+                <a href="http://clarify.io/about-us">About</a><br>
+                <a target="_blank" href="http://clarify.io/jobs">Jobs</a><br>
+                <a href="http://clarify.io/events">Events</a><br>
+                <a href="http://clarify.io/news">In the News</a><br>
+                <a target="_blank" href="http://clarify.totemapp.com/">Press Kit</a><br>
+                <a href="http://clarify.io/contact-us">Contact us</a>
             </div>
             <div class='footer-column fc-2'>
                 <h2>Developers</h2>
-                <p>
-                    <a href="http://docs.clarify.io">Documentation</a><br>
-                    <a href="http://clarify.io/blog/">Tech Blog</a><br>
-                    <a href="http://clarify.io/pricing">Pricing</a><br>
-                    <a href="https://developer.clarify.io/accounts/signup/">Sign Up</a><br>
-                    <a href="http://clarify.io/try-it-now">Try it Now</a><br>
-                </p>
+                <a href="http://docs.clarify.io">Documentation</a><br>
+                <a href="http://clarify.io/blog/">Tech Blog</a><br>
+                <a href="http://clarify.io/pricing">Pricing</a><br>
+                <a href="https://developer.clarify.io/accounts/signup/">Sign Up</a><br>
+                <a href="http://clarify.io/try-it-now">Try it Now</a>
             </div>
             <div class='footer-column fc-3'>
                 <h2>Visit Us</h2>
