cleaning up the landing page

--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -3,55 +3,53 @@
 <div class='innerMainPanel0'></div>
 <main>
     <div class='mainMainRow3'>
-        <div class='mainMainContent4 ContentHeight'>
-            <div data-type="text" class='innerText27'>
-                <div class='ContentDiv'>
-                    <h1 class="PageTitle">{{ page.title }}</h1>
-                    <p class="Normal-White">{{ page.subtitle }}</p>
+        <div class='mainMainContent4'>
+            <h1 class="PageTitle">{{ page.title }}</h1>
+            <p class="Normal-White">{{ page.subtitle }}</p>
+        </div>
+
+        <div class="backdrop">
+            <div class="content-canvas" style="width: 960px">
+                <div class="documentation-section">
+                    <h2>API Guide</h2>
+
+                    <img src="/assets/img/gear.png">
+
+                    <p>Looking for the raw HTTP verbs &amp; nouns? This is the place to go to view our Swagger documentation.</p>
+
+                    <div class='button'>
+                        <a href="/api">API Documentation</a>
+                    </div>
+                </div>
+
+                <div class="documentation-section">
+                    <h2>Quickstarts</h2>
+
+                    <img src="/assets/img/quickstarts.png">
+
+                    <p>A simple set of tutorials with code snippets showing how to index and search your audio &amp; video files.</p>
+
+                    <div class='button'>
+                        <a href="/quickstarts">Show me the code</a>
+                    </div>
+                </div>
+
+                <div class="documentation-section">
+                    <h2>Helper Libraries</h2>
+
+                    <img src="/assets/img/folder.png">
+
+                    <p>These libraries provide language-specific interfaces to the REST API. Available in PHP, Python, Ruby, Java, and Node.js</p>
+
+                    <div class='button'>
+                        <a href="/libraries">Download now</a>
+                    </div>
                 </div>
             </div>
+        </div>
 
-            <div class='innerShape99'></div>
-
-            <div class='innerShape88 documentation-section'>
-                <h2>Quickstarts</h2>
-
-                <img src="/assets/img/quickstarts.png">
-
-                <p>A simple set of tutorials with code snippets showing how to index and search your audio &amp; video files.</p>
-
-                <div class='button'>
-                    <a href="/quickstarts">Show me the code</a>
-                </div>
-            </div>
-
-            <div class='innerShape89 documentation-section'>
-                <h2>Helper Libraries</h2>
-
-                <img src="/assets/img/folder.png">
-
-                <p>These libraries provide language-specific interfaces to the REST API. Available in PHP, Python, Ruby, Java, and Node.js</p>
-
-                <div class='button'>
-                    <a href="/libraries">Download now</a>
-                </div>
-            </div>
-
-            <div class='innerShape90 documentation-section'>
-                <h2>API Guide</h2>
-
-                <img src="/assets/img/gear.png">
-
-                <p>Looking for the raw HTTP verbs &amp; nouns? This is the place to go to view our Swagger documentation.</p>
-
-                <div class='button'>
-                    <a href="/api">API Documentation</a>
-                </div>
-            </div>
-
-            <div class='signup-button'>
-                <a href="https://developer.clarify.io/accounts/signup/">Sign up Now</a>
-            </div>
+        <div class="footer-signup">
+            <a class="Buttons-White" href="https://developer.clarify.io/accounts/signup/">Sign up now</a>
         </div>
     </div>
 </main>
