removing unused selectors

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,6 +16,6 @@
 <body>
 <div>
 
-    <div class='dataTypeMainPanel mainMainPanel0' data-type='MainPanel'>
-        <div data-id='mainShape24' class='dataTypeShape  mainShape24 mainShape' data-type='Shape' ></div>
+    <div class='dataTypeMainPanel mainMainPanel0'>
+        <div class='dataTypeShape  mainShape24 mainShape'></div>
         {% include navigation.html %}
