finished the captions section

--- a/_includes/sections/order-captions.html
+++ b/_includes/sections/order-captions.html
@@ -4,7 +4,7 @@
 
 <h2>Ordering Captions</h2>
 
-<p>The most important part is the <code>href</code> of the <code>clarify:insights</code> key. By making an HTTP POST to that URI, Clarify will start processing the audio to create the captions.</p>
+<p>The most important part of the response is the <code>href</code> of the <code>clarify:insights</code> key. By making an HTTP POST to that URI, Clarify will start processing the audio to create the captions.</p>
 
 {% include /structural/tabs.html %}
 
