The year is 2016.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -40,7 +40,7 @@
             </div>
             <div class="terms-of-service center">
                 <span>
-                    &copy; 2015 Clarify, Inc. &nbsp;| &nbsp;<a href="http://clarify.io/terms-of-service">Terms of Service&nbsp;</a>
+                    &copy; 2015 - 2016 Clarify, Inc. &nbsp;| &nbsp;<a href="http://clarify.io/terms-of-service">Terms of Service&nbsp;</a>
                     <a href="http://status.clarify.io/"><img src="/assets/img/gauge-colored.png" style="vertical-align: middle" />API Status</a>
                 </span>
             </div>
