Updated frontpage link to point to Overview page. Made the images into links.

--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -13,19 +13,19 @@
                 <div class="documentation-section">
                     <h2>API Guide</h2>
 
-                    <img src="/assets/img/gear.png">
+                    <a href="/overview"><img src="/assets/img/gear.png"></a>
 
                     <p>Looking for the raw HTTP verbs &amp; nouns? This is the place to go to view our Swagger documentation.</p>
 
                     <div class='button'>
-                        <a href="/api">API Documentation</a>
+                        <a href="/overview">API Documentation</a>
                     </div>
                 </div>
 
                 <div class="documentation-section">
                     <h2>Quickstarts</h2>
 
-                    <img src="/assets/img/quickstarts.png">
+                    <a href="/quickstarts"><img src="/assets/img/quickstarts.png"></a>
 
                     <p>A simple set of tutorials with code snippets showing how to index and search your audio &amp; video files.</p>
 
@@ -37,7 +37,7 @@
                 <div class="documentation-section">
                     <h2>Helper Libraries</h2>
 
-                    <img src="/assets/img/folder.png">
+                    <a href="/libraries"><img src="/assets/img/folder.png"></a>
 
                     <p>These libraries provide language-specific interfaces to the REST API. Available in PHP, Python, Ruby, Java, and Node.js</p>
 
