Added overview to sidebar.

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -3,6 +3,7 @@
         <h3 class="widget-title">Documentation</h3>
         <div class="menu-documentation-sidebar-container">
             <ul id="menu-documentation-sidebar" class="menu">
+                <li class="menu-item"><a href="/overview/">API Overview</a></li>
                 <li class="menu-item"><a href="/api/">API Endpoints</a></li>
                 <li class="menu-item"><a href="/libraries/">Libraries/SDKs</a></li>
                 <li class="menu-item"><a href="/media/">Sample Media</a></li>
