--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -301,7 +301,7 @@
 .mainShape60 {
     left: -174px;
     top: -1px;
-    width: 1619px;
+    width: 100%;
     height: 71px;
     z-index: 45;
     border-width: 0;
