--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,35 +12,22 @@
                 <h2>Company</h2>
                 <a href="http://clarify.io/">Home</a><br>
                 <a href="http://clarify.io/about-us">About</a><br>
-                <a target="_blank" href="http://clarify.io/jobs">Jobs</a><br>
-                <a href="http://clarify.io/events">Events</a><br>
-                <a href="http://clarify.io/news">In the News</a><br>
-                <a target="_blank" href="http://clarify.totemapp.com/">Press Kit</a><br>
                 <a href="http://clarify.io/contact-us">Contact us</a>
             </div>
             <div class='footer-column fc-2'>
                 <h2>Developers</h2>
                 <a href="http://docs.clarify.io">Documentation</a><br>
-                <a href="http://clarify.io/blog/">Tech Blog</a><br>
-                <a href="http://clarify.io/pricing">Pricing</a><br>
-                <a href="https://developer.clarify.io/accounts/signup/">Sign Up</a><br>
                 <a href="http://clarify.io/try-it-now">Try it Now</a>
-            </div>
-            <div class='footer-column fc-3'>
-                <h2>Visit Us</h2>
-                Clarify, Inc<br>501 Pedernales Street<br>Building 1B<br>Austin, TX 78702
             </div>
             <div class='footer-column fc-4'>
                 <h2>Follow Us</h2>
                 <a href="https://angel.co/clarify-inc">Angelist</a><br>
                 <a href="https://www.linkedin.com/company/clarify-inc">Linked In</a><br>
                 <a target="_blank" href="https://github.com/Clarify">Github</a><br>
-                <a href="https://twitter.com/ClarifyIO">Twitter</a><br>
-                <a href="https://www.facebook.com/clarifyinc">Facebook</a><br>
             </div>
             <div class="terms-of-service center">
                 <span>
-                    &copy; 2015 - 2016 Clarify, Inc. &nbsp;| &nbsp;<a href="http://clarify.io/terms-of-service">Terms of Service&nbsp;</a>
+                    &copy; 2017 Clarify, Inc. &nbsp;| &nbsp;<a href="http://clarify.io/terms-of-service">Terms of Service&nbsp;</a>
                     <a href="http://status.clarify.io/"><img src="/assets/img/gauge-colored.png" style="vertical-align: middle" />API Status</a>
                 </span>
             </div>
