Added technology menu item

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -7,6 +7,7 @@
         <div class="menu left horizontal mainMenu54">
             <ul class="menu left horizontal">
                 <li class="menu-item"><a href="http://clarify.io/how-clarify-works/">How it Works</a></li>
+                <li class="menu-item"><a href="http://clarify.io/technology/">Technology</a></li>
                 <li class="menu-item"><a href="/">Docs</a></li>
                 <li class="menu-item"><a href="https://developer.clarify.io/">Log In</a></li>
             </ul>
