Added insights docs.

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,7 +9,7 @@
                 <li class="menu-item"><a href="/media/">Sample Media</a></li>
                 <li class="menu-item"><a href="/faq/">Frequently Asked Questions</a></li>
                 <li class="menu-item"><a href="/errors/">Error Codes</a></li>
-                <li class="menu-item"><a href="/insights/">Insights</a>
+                <li class="menu-item"><a href="#">Insights</a>
                     <ul class="sub-menu">
                         {% assign items = site.insights | sort: 'order' %}
                         {% for item in items %}
