Changed links for new www site.

--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -5,7 +5,7 @@
     <div class='mainMainRow3'>
         <div class='mainMainContent4'>
             <h1 class="PageTitle">{{ page.title }}</h1>
-            <p class="Normal-White">{{ page.subtitle }}</p>
+            <p class="">{{ page.subtitle }}</p>
         </div>
 
         <div class="backdrop">
