--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@
 .PageTitle {
     font-family: Oswald;
     font-weight: 300;
-    color: #fff;
+    color: #222;
     font-size: 60px;
     line-height: 60px;
     letter-spacing: 3px;
