--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,13 +11,12 @@
             <div class='footer-column fc-1'>
                 <h2>Company</h2>
                 <a href="http://clarify.io/">Home</a><br>
-                <a href="http://clarify.io/about-us">About</a><br>
-                <a href="http://clarify.io/contact-us">Contact us</a>
+                <a href="http://clarify.io/about.html">About</a><br>
+                <a href="mailto:contact@clarify.io">Contact us</a>
             </div>
             <div class='footer-column fc-2'>
                 <h2>Developers</h2>
                 <a href="http://docs.clarify.io">Documentation</a><br>
-                <a href="http://clarify.io/try-it-now">Try it Now</a>
             </div>
             <div class='footer-column fc-4'>
                 <h2>Follow Us</h2>
@@ -27,7 +26,7 @@
             </div>
             <div class="terms-of-service center">
                 <span>
-                    &copy; 2017 Clarify, Inc. &nbsp;| &nbsp;<a href="http://clarify.io/terms-of-service">Terms of Service&nbsp;</a>
+                    &copy; 2017 Clarify, Inc. &nbsp;| &nbsp;<a href="http://clarify.io/terms.html">Terms of Service&nbsp;</a>
                     <a href="http://status.clarify.io/"><img src="/assets/img/gauge-colored.png" style="vertical-align: middle" />API Status</a>
                 </span>
             </div>
