--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,13 +5,13 @@
     <link rel="stylesheet" type="text/css" href="/assets/css/style.css"/>
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Oswald&subset=latin,cyrillic-ext,greek-ext,greek,latin-ext,cyrillic"/>
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open Sans:300,300italic,400,italic,600,600italic,700,700italic,800,800italic|Candal:400|weights:[400:00|Candal:400|Open Sans:300,300italic,400,italic,600,600italic,700,700italic,800,800italic|Open Sans:300,300italic,400,italic,600,600italic,700,700italic,800,800italic|Open Sans:300,300italic,400,italic,600,600italic,700,700italic,800,800italic|Open Sans:300,300italic,400,italic,600,600italic,700,700italic,800,800italic|Candal:400|Candal:400|Candal:400|Candal:400|Averia Sans Libre:300,300italic,400,italic,700,700italic|Candal:400|Droid Serif:400,italic,700,700italic|Candal:400|Candal:400|Arial:400,700|Oswald:300,400,700|Dosis:200,300,400,500,600,700,800|Coustard:400,900|Enriqueta:400,700&subset=latin,cyrillic-ext,greek-ext,greek,latin-ext,cyrillic"/>
-    <script type="text/javascript" src="http://clarify.io/wp-content/themes/clarify/js/jquery/1.7.2/jquery.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="http://clarify.io/wp-content/themes/clarify/fonts/alefhebrew.css"/>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Alef" rel="stylesheet">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <meta property="og:image" content="http://clarify.io/wp-content/uploads/2014/07/clarify-negative-square.png" />
+    <meta property="og:image" content="http://clarify.io/images/clarify-negative-square.png" />
     <link rel="image_src"
           type="image/png"
-          href="http://clarify.io/wp-content/uploads/2014/07/clarify-negative-square.png" />
+          href="http://clarify.io/images/clarify-negative-square.png" />
 </head>
 <body>
 <div>
